# veno-script

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: main.cpp
